--- a/English.lproj/MyDocument.xib
+++ b/English.lproj/MyDocument.xib
@@ -128,8 +128,6 @@
 									</object>
 									<string key="NSFrame">{{0, 14}, {179, 20}}</string>
 									<reference key="NSSuperview"/>
-									<reference key="NSWindow"/>
-									<reference key="NSNextKeyView"/>
 									<bool key="NSEnabled">YES</bool>
 									<object class="NSPathCell" key="NSCell" id="821488445">
 										<int key="NSCellFlags">337772033</int>
@@ -414,8 +412,6 @@
 									<int key="NSvFlags">268</int>
 									<string key="NSFrame">{{0, 14}, {100, 25}}</string>
 									<reference key="NSSuperview"/>
-									<reference key="NSWindow"/>
-									<reference key="NSNextKeyView"/>
 									<bool key="NSEnabled">YES</bool>
 									<object class="NSSegmentedCell" key="NSCell" id="1068445230">
 										<int key="NSCellFlags">67239424</int>
@@ -531,8 +527,6 @@
 									<int key="NSvFlags">268</int>
 									<string key="NSFrame">{{0, 14}, {160, 22}}</string>
 									<reference key="NSSuperview"/>
-									<reference key="NSWindow"/>
-									<reference key="NSNextKeyView"/>
 									<bool key="NSViewIsLayerTreeHost">YES</bool>
 									<int key="NSViewLayerContentsRedrawPolicy">2</int>
 									<bool key="NSEnabled">YES</bool>
@@ -1775,7 +1769,7 @@ wGw</bytes>
 				<bool key="NSTransparent">NO</bool>
 			</object>
 			<object class="NSBox" id="346779108">
-				<nil key="NSNextResponder"/>
+				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">12</int>
 				<object class="NSMutableArray" key="NSSubviews">
 					<bool key="EncodedWithXMLCoder">YES</bool>
@@ -1786,7 +1780,7 @@ wGw</bytes>
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<object class="NSImageView" id="577784277">
 								<reference key="NSNextResponder" ref="1068001591"/>
-								<int key="NSvFlags">268</int>
+								<int key="NSvFlags">266</int>
 								<object class="NSMutableSet" key="NSDragTypes">
 									<bool key="EncodedWithXMLCoder">YES</bool>
 									<object class="NSArray" key="set.sortedObjects">
@@ -1801,6 +1795,8 @@ wGw</bytes>
 								</object>
 								<string key="NSFrame">{{0, 116}, {240, 18}}</string>
 								<reference key="NSSuperview" ref="1068001591"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="374044468"/>
 								<bool key="NSEnabled">YES</bool>
 								<object class="NSImageCell" key="NSCell" id="252999836">
 									<int key="NSCellFlags">134348288</int>
@@ -1818,6 +1814,8 @@ wGw</bytes>
 								<int key="NSvFlags">268</int>
 								<string key="NSFrame">{{10, 118}, {44, 14}}</string>
 								<reference key="NSSuperview" ref="1068001591"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="496457104"/>
 								<bool key="NSEnabled">YES</bool>
 								<object class="NSTextFieldCell" key="NSCell" id="290904772">
 									<int key="NSCellFlags">68288064</int>
@@ -1846,6 +1844,8 @@ wGw</bytes>
 								</object>
 								<string key="NSFrame">{{224, 119}, {11, 10}}</string>
 								<reference key="NSSuperview" ref="1068001591"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="626383080"/>
 								<bool key="NSEnabled">YES</bool>
 								<object class="NSImageCell" key="NSCell" id="734068787">
 									<int key="NSCellFlags">134348288</int>
@@ -1873,6 +1873,8 @@ wGw</bytes>
 												<int key="NSvFlags">256</int>
 												<string key="NSFrameSize">{243, 116}</string>
 												<reference key="NSSuperview" ref="745645370"/>
+												<reference key="NSWindow"/>
+												<reference key="NSNextKeyView" ref="798869690"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="_NSCornerView" key="NSCornerView">
 													<nil key="NSNextResponder"/>
@@ -1933,6 +1935,7 @@ wGw</bytes>
 										</object>
 										<string key="NSFrameSize">{243, 116}</string>
 										<reference key="NSSuperview" ref="626383080"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="452345484"/>
 										<reference key="NSDocView" ref="452345484"/>
 										<reference key="NSBGColor" ref="1041628293"/>
@@ -1943,6 +1946,8 @@ wGw</bytes>
 										<int key="NSvFlags">-2147483392</int>
 										<string key="NSFrame">{{224, 17}, {15, 102}}</string>
 										<reference key="NSSuperview" ref="626383080"/>
+										<reference key="NSWindow"/>
+										<reference key="NSNextKeyView" ref="243745588"/>
 										<reference key="NSTarget" ref="626383080"/>
 										<string key="NSAction">_doScroller:</string>
 										<double key="NSPercent">0.99122804403305054</double>
@@ -1952,6 +1957,8 @@ wGw</bytes>
 										<int key="NSvFlags">-2147483392</int>
 										<string key="NSFrame">{{1, 119}, {223, 15}}</string>
 										<reference key="NSSuperview" ref="626383080"/>
+										<reference key="NSWindow"/>
+										<reference key="NSNextKeyView"/>
 										<int key="NSsFlags">1</int>
 										<reference key="NSTarget" ref="626383080"/>
 										<string key="NSAction">_doScroller:</string>
@@ -1960,6 +1967,7 @@ wGw</bytes>
 								</object>
 								<string key="NSFrameSize">{243, 116}</string>
 								<reference key="NSSuperview" ref="1068001591"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="745645370"/>
 								<int key="NSsFlags">133680</int>
 								<reference key="NSVScroller" ref="798869690"/>
@@ -1970,9 +1978,14 @@ wGw</bytes>
 						</object>
 						<string key="NSFrameSize">{240, 133}</string>
 						<reference key="NSSuperview" ref="346779108"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="577784277"/>
 					</object>
 				</object>
 				<string key="NSFrameSize">{240, 133}</string>
+				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
+				<reference key="NSNextKeyView" ref="1068001591"/>
 				<string key="NSOffsets">{0, 0}</string>
 				<object class="NSTextFieldCell" key="NSTitleCell">
 					<int key="NSCellFlags">67239424</int>
@@ -4033,6 +4046,7 @@ wGw</bytes>
 							<string>detailedCompareEntryTextView</string>
 							<string>mainSplitView</string>
 							<string>parentController</string>
+							<string>theFSViewer</string>
 						</object>
 						<object class="NSArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
@@ -4050,6 +4064,7 @@ wGw</bytes>
 							<string>NSTextView</string>
 							<string>DifferencesSplitView</string>
 							<string>DifferencesViewController</string>
+							<string>FSViewer</string>
 						</object>
 					</object>
 					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
@@ -4070,6 +4085,7 @@ wGw</bytes>
 							<string>detailedCompareEntryTextView</string>
 							<string>mainSplitView</string>
 							<string>parentController</string>
+							<string>theFSViewer</string>
 						</object>
 						<object class="NSArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
@@ -4129,6 +4145,10 @@ wGw</bytes>
 								<string key="name">parentController</string>
 								<string key="candidateClassName">DifferencesViewController</string>
 							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">theFSViewer</string>
+								<string key="candidateClassName">FSViewer</string>
+							</object>
 						</object>
 					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
@@ -4153,6 +4173,148 @@ wGw</bytes>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/DifferencesViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">FSViewer</string>
+					<string key="superclassName">NSBox</string>
+					<object class="NSMutableDictionary" key="actions">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>actionSwitchToFilesBrowser:</string>
+							<string>actionSwitchToFilesOutline:</string>
+							<string>actionSwitchToFilesTable:</string>
+							<string>browserMenuOpenTerminalHere:</string>
+							<string>browserMenuRevealSelectedFilesInFinder:</string>
+							<string>browserOpenChosenNodesWithABrowserToChoose:</string>
+							<string>browserOpenChosenNodesWithApplication:</string>
+							<string>forceRefreshFSViewer:</string>
+							<string>fsviewerAction:</string>
+							<string>fsviewerDoubleAction:</string>
+							<string>viewerMenuOpenSelectedFilesInFinder:</string>
+						</object>
+						<object class="NSArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+						</object>
+					</object>
+					<object class="NSMutableDictionary" key="actionInfosByName">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>actionSwitchToFilesBrowser:</string>
+							<string>actionSwitchToFilesOutline:</string>
+							<string>actionSwitchToFilesTable:</string>
+							<string>browserMenuOpenTerminalHere:</string>
+							<string>browserMenuRevealSelectedFilesInFinder:</string>
+							<string>browserOpenChosenNodesWithABrowserToChoose:</string>
+							<string>browserOpenChosenNodesWithApplication:</string>
+							<string>forceRefreshFSViewer:</string>
+							<string>fsviewerAction:</string>
+							<string>fsviewerDoubleAction:</string>
+							<string>viewerMenuOpenSelectedFilesInFinder:</string>
+						</object>
+						<object class="NSArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<object class="IBActionInfo">
+								<string key="name">actionSwitchToFilesBrowser:</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">actionSwitchToFilesOutline:</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">actionSwitchToFilesTable:</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">browserMenuOpenTerminalHere:</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">browserMenuRevealSelectedFilesInFinder:</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">browserOpenChosenNodesWithABrowserToChoose:</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">browserOpenChosenNodesWithApplication:</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">forceRefreshFSViewer:</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">fsviewerAction:</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">fsviewerDoubleAction:</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">viewerMenuOpenSelectedFilesInFinder:</string>
+								<string key="candidateClassName">id</string>
+							</object>
+						</object>
+					</object>
+					<object class="NSMutableDictionary" key="outlets">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>contextualMenuForFSViewerPane</string>
+							<string>detailedPatchesWebView</string>
+							<string>parentController</string>
+						</object>
+						<object class="NSArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>NSMenu</string>
+							<string>PatchesWebview</string>
+							<string>id</string>
+						</object>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>contextualMenuForFSViewerPane</string>
+							<string>detailedPatchesWebView</string>
+							<string>parentController</string>
+						</object>
+						<object class="NSArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<object class="IBToOneOutletInfo">
+								<string key="name">contextualMenuForFSViewerPane</string>
+								<string key="candidateClassName">NSMenu</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">detailedPatchesWebView</string>
+								<string key="candidateClassName">PatchesWebview</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">parentController</string>
+								<string key="candidateClassName">id</string>
+							</object>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/FSViewer.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
@@ -5463,6 +5625,25 @@ wGw</bytes>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
+					<string key="className">PatchesWebview</string>
+					<string key="superclassName">WebView</string>
+					<object class="NSMutableDictionary" key="actions">
+						<string key="NS.key.0">fileDiffsDisplayPreferencesChanged:</string>
+						<string key="NS.object.0">id</string>
+					</object>
+					<object class="NSMutableDictionary" key="actionInfosByName">
+						<string key="NS.key.0">fileDiffsDisplayPreferencesChanged:</string>
+						<object class="IBActionInfo" key="NS.object.0">
+							<string key="name">fileDiffsDisplayPreferencesChanged:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/PatchesWebview.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
 					<string key="className">PopupActionButton</string>
 					<string key="superclassName">NSButton</string>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
@@ -5756,6 +5937,24 @@ wGw</bytes>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/ThickSplitView.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">WebView</string>
+					<object class="NSMutableDictionary" key="actions">
+						<string key="NS.key.0">reloadFromOrigin:</string>
+						<string key="NS.object.0">id</string>
+					</object>
+					<object class="NSMutableDictionary" key="actionInfosByName">
+						<string key="NS.key.0">reloadFromOrigin:</string>
+						<object class="IBActionInfo" key="NS.object.0">
+							<string key="name">reloadFromOrigin:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/WebView.h</string>
 					</object>
 				</object>
 			</object>
